--- a/proyecto_transversal/nbproject/private/private.properties
+++ b/proyecto_transversal/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\infit\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.jcalendar-1.4.jar=C:\\Users\\mtcer\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
+user.properties.file=C:\\Users\\mtcer\\AppData\\Roaming\\NetBeans\\17\\build.properties
