--- a/proyecto_transversal/nbproject/project.properties
+++ b/proyecto_transversal/nbproject/project.properties
@@ -32,10 +32,18 @@ dist.jar=${dist.dir}/proyecto_transversal.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\pablo\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=C:\\Users\\mtcer\\Downloads\\jcalendar-1.4 (1)\\lib\\jcalendar-1.4.jar
+file.reference.jgoodies-common-1.2.0.jar=C:\\Users\\mtcer\\Downloads\\jcalendar-1.4 (1)\\lib\\jgoodies-common-1.2.0.jar
+file.reference.jgoodies-looks-2.4.1.jar=C:\\Users\\mtcer\\Downloads\\jcalendar-1.4 (1)\\lib\\jgoodies-looks-2.4.1.jar
+file.reference.junit-4.6.jar=C:\\Users\\mtcer\\Downloads\\jcalendar-1.4 (1)\\lib\\junit-4.6.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.jgoodies-common-1.2.0.jar}:\
+    ${file.reference.jgoodies-looks-2.4.1.jar}:\
+    ${file.reference.junit-4.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
