Modificacion vista AlumnosxMaterias
con esas modificaciones deberia cargar los alumnos inscriptos por materia. En inscripción data le borre el estado porque es un atributo de la materia y no de la inscripción, y si lo dejaba ahi me daba error

--- a/proyecto_transversal/nbproject/project.properties
+++ b/proyecto_transversal/nbproject/project.properties
@@ -36,6 +36,7 @@ file.reference.jcalendar-1.4.jar-1=C:\\Users\\mtcer\\Downloads\\jcalendar-1.4 (1
 file.reference.jgoodies-common-1.2.0.jar=C:\\Users\\mtcer\\Downloads\\jcalendar-1.4 (1)\\lib\\jgoodies-common-1.2.0.jar
 file.reference.jgoodies-looks-2.4.1.jar=C:\\Users\\mtcer\\Downloads\\jcalendar-1.4 (1)\\lib\\jgoodies-looks-2.4.1.jar
 file.reference.junit-4.6.jar=C:\\Users\\mtcer\\Downloads\\jcalendar-1.4 (1)\\lib\\junit-4.6.jar
+file.reference.mariadb-java-client-3.0.11.jar=C:\\Users\\mtcer\\Downloads\\mariadb-java-client-3.0.11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -43,7 +44,8 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar-1}:\
     ${file.reference.jgoodies-common-1.2.0.jar}:\
     ${file.reference.jgoodies-looks-2.4.1.jar}:\
-    ${file.reference.junit-4.6.jar}
+    ${file.reference.junit-4.6.jar}:\
+    ${file.reference.mariadb-java-client-3.0.11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
